# cc_plugin

./: .gitignore  README.md  pyproject.toml
.superpowers/sdd/: progress.md  task-4-report.md  task-5-brief.md  task-5-report.md  task-6-brief.md  task-6-report.md  task-7-brief.md  task-7-report.md
docs/superpowers/plans/: 2026-07-16-claude-code-third-party-reasoning-proxy-implementation.md  2026-07-17-phase2-final-branch-review-fixes.md  2026-07-17-phase2-final-review-fixes-implementation.md  2026-07-17-phase2-review-fixes-implementation.md  2026-07-17-third-party-reasoning-phase-2-implementation.md  2026-07-18-phase2-broad-final-review-fixes.md  2026-07-18-third-party-reasoning-phase-2b-implementation.md
docs/superpowers/specs/: 2026-07-16-claude-code-third-party-reasoning-proxy-design.md  2026-07-17-third-party-reasoning-phase-2-minimal-design.md  (+1 more)
proxy/: app.py  candidate.py  config.claude-code.toml.example  config.py  config.toml.example  evals.py  normalize.py  phase2.py  phase2b.py  phase2b_extract.py  recorder.py  rewrite.py  schemas.py  upstream.py
proxy/fixtures/: candy_question.json  digit_swap_sum.json  door_toggle_100.json  modulo_minus_one.json  non_candy_exact_output_suite.json  non_candy_format.json  non_candy_reasoning.json  triple_color_double_guarantee.json
scripts/: claude-code-env.sh  start-claude-code-proxy.sh
tests/: conftest.py  test_app.py  test_candidate.py  test_claude_code_cli.py  test_config.py  test_evals.py  test_normalize.py  test_phase2.py  test_phase2b.py  test_phase2b_extract.py  test_rewrite.py  test_upstream.py
