[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-plugin-proxy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115", "uvicorn>=0.30", "httpx>=0.27", "pydantic>=2.8"]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23"]
